# Isometric_Game_new_compilation

./: .gitignore  BGFX_ARCHITECTURE.md  BGFX_MIGRATION_STATUS.md  CMakeLists.txt  CMakeLists.txt.modular  CMakeUserPresets.json  CREDITS.txt  INSTRUCCIONES_COMPILACION.md  LICENSES.txt  MIGRATION_COMPLETE.md  MODULES_SETUP_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  test_bgfx_sdl2.cpp  test_original.cpp
.claude/: settings.local.json
assets/tiles/: descripcion cubos sprite_sheet.txt  descripcion_arboles.txt
docs/: README.md
examples/: README.md
include/: Block.hpp  Camera.hpp  Chunk.hpp  Game.hpp  Player.hpp  Renderer.hpp  World.hpp
modules/: README.md
modules/audio/: README.md
modules/core/: README.md
modules/core/include/core/: Block.hpp  Chunk.hpp  Game.hpp  World.hpp
modules/core/src/: Camera.cpp  Chunk.cpp  Game.cpp  Player.cpp  World.cpp
modules/ecs/: README.md
modules/input/: README.md
modules/particles/: README.md
modules/pathfinding/: README.md
modules/rendering/: README.md
modules/rendering/include/rendering/: Renderer.hpp
modules/rendering/src/: Renderer.cpp
modules/utils/: README.md
shaders/: fs_instanced.glsl  fs_iso_tile.sc  fs_isometric.sc  varying.sc  varyings.sc  vs_instanced.glsl  vs_instanced.sc  vs_iso_tile.sc  vs_isometric.sc
src/: Camera.cpp  Chunk.cpp  Game.cpp  Player.cpp  Renderer.cpp  World.cpp  main.cpp
tests/: README.md
tools/: README.md
